# instagram-auto-poster

./: .gitignore  Dockerfile  PROJETO.md  Procfile  api.py  main.py  postar_instagram.py  pyproject.toml  requirements.txt  sincronizar_videos.py
