[project]
name = "social-media"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.86.0",
    "boto3>=1.35.0",
    "fastapi>=0.135.2",
    "google-auth>=2.38.0",
    "google-api-python-client>=2.166.0",
    "openai>=2.30.0",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
    "static-ffmpeg>=2.5",
    "uvicorn>=0.42.0",
]
